# lab3b

./: CMakeLists.txt  head.hpp  lab3_b.cpp  main.cpp  processing.cpp
